# manage-your-cli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apis/: README.md
apps/web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/web/src-tauri/frontend/: index.html
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs
bugs/: 2026-05-23-smoke-test-bug.md  README.md
docs/: HANDOFF.md  INSTALL.md  deltas.md  design-polish-mobile.md  dev-log-achievements.md  dev-log.md  dev-modes.md  dev-questions.md  dev-queue.md  mobile-architecture-principles.md  mobile-deltas.md  mobile-dev-log.md  overnight-report-2026-05-25.md  research-codex-warm.md  research-im-channels.md  research-kanban.md
role-templates/: CATALOG.md  README.md
scripts/: .env.test.local.example  README.md  _mac-ios-refresh.sh  adb-keepalive.sh  agent-watchdog.sh  auto-build-release.sh  backfill-project-tags.py  build-all.sh  build-android-apk.sh  build-android.sh  build-hermes-sidecar.sh  build-web.sh  build-windows-installer-local.ps1  check-deps.sh  clawbot-bind-probe.mjs  clear-stale-portproxy.ps1  codex-agent.sh  codex-openai-shim.mjs  copy-hermes-sidecar-for-tauri.mjs  copy-standalone-for-tauri.mjs  copy-standalone-symlink-aware.mjs  cosyvoice-server.py  dev-daemon.sh  dev-prewarm.sh  dev-self-heal.sh  fetch-node-sidecar.sh  git-commit-narrow.sh  https-proxy.mjs  install-apk-samsung.sh  install-desk-forward-task.ps1  install-desk-systemd.sh  install-git-hooks.sh  install-playwright-deps.sh  (+30 more)
(+493 files in other folders)
