[package]
name = "holon-desk"
version = "0.1.0"
description = "Holon desktop shell (Tauri 2.x) — wraps apps/web Next.js as a native window per ADR-005."
authors = ["Holon Engineering"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
# iter-012 Pass #6.1: shell plugin gives us `app.shell().sidecar(name)` for
# spawning the bundled Node binary that runs `next start` against the
# .next/standalone server bundle. Resolves Q-010 path (a) — Node sidecar.
tauri-plugin-shell = "2"
